fixing layout bugs

--- a/public_html/css/root.css
+++ b/public_html/css/root.css
@@ -86,7 +86,7 @@ body {
 	background-color: #FFF;
     border-radius: 25px;
     border: 2px solid #008CBA;
-	margin: auto;
+	margin: 100px;
 	padding: 20px;
     text-align:center;
 }
