--- a/public_html/css/user_details.css
+++ b/public_html/css/user_details.css
@@ -1,70 +1,6 @@
-/* include on every page, site wide css! */
-
-:root {
-	box-sizing: border-box;
-	background-image: url("../img/layout/background.jpg"); /* I put the bg up here so body could be the white square */
-	background-repeat: repeat;
-
-}
-
-.nav {
-    font-size: 12pt;
-}
-
-#logoutbutton {
-	padding-top: 10px;
-}
-
-/* bootstrap menu style */
-.navbar-fixed-top {
-    min-height: 60px;
-}
-
-.navbar-nav > li > a {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    line-height: 60px;
-}
-
-@media (max-width: 1000px) {
-  .navbar-header {
-      float: none;
-  }
-  .navbar-left,.navbar-right {
-      float: none !important;
-  }
-  .navbar-toggle {
-      display: block;
-  }
-  .navbar-collapse {
-      border-top: 1px solid transparent;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-  }
-  .navbar-fixed-top {
-      top: 0;
-      border-width: 0 0 1px;
-  }
-  .navbar-collapse.collapse {
-      display: none!important;
-  }
-  .navbar-nav {
-      float: none!important;
-      margin-top: 7.5px;
-  }
-  .navbar-nav>li {
-      float: none;
-  }
-  .navbar-nav>li>a {
-      padding-top: 10px;
-      padding-bottom: 10px;
-  }
-  .collapse.in{
-      display:block !important;
-  }
-}
-
 body {
 	background: transparent;
+    margin:100px;
 }
 .contentborder {
 	display: flex;
@@ -77,55 +13,9 @@ body {
 	margin: auto;
 	margin-top: 100px;
 	padding: 10px;
+    background-color: white;
 }
 
 .contentborder input {
 	padding: 10px;
-}
-
-/* all buttons use this css */
-input[type=submit], button, input[type=button] {
-    background-color: #008CBA; /* blue */ 
-    border: 2px solid #008CBA;
-    border-radius: 0.5em;
-    color: white; 
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s;  /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    /* this part centers button, so must override if you dont want your buttons centered! */
-    display:block; 
-    margin:auto;
-}
-
-input[type=submit]:hover, button:hover, input[type=button]:hover {
-    background-color: #FFF; /* white */
-    color: #008CBA; /* blue */
-}
-
-h2 {
-    text-align: center;
-}
-
-/* each form option div shares this style */
-.formOption {
-    padding:10px;
-}
-
-.navbar-brand {
-	padding:0;
-}
-
-#login-dp .form-group {
-    margin-bottom: 10px;
-	padding: 5px;
-}
-
-.dropdown-menu{
-	margin: 10px;
 }
